# Dashboard

./: .env  .gitignore  DOCKER_FIX.md  LOCAL_SETUP.md  OPTIMIZATION_REPORT.md  WORK_REPORT_26-27_12_2025.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start.sh
backend/: .dockerignore  .env  Dockerfile  main.py  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  auth.py  bots.py
backend/app/core/: cache.py  config.py  dependencies.py  exceptions.py  logging_config.py  validators.py
backend/app/database/: supabase_client.py
backend/app/middleware/: cache_headers.py  etag.py  rate_limit.py  request_id.py  request_logging.py  request_size_limit.py  request_timeout.py  security_headers.py
backend/app/models/: analytics.py  user.py
backend/app/services/: telegram_auth.py
frontend/: .dockerignore  .env  .eslintrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: sw.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: LoadingOverlay.jsx  LoadingSpinner.jsx
frontend/src/components/dashboard/: FunnelChart.jsx  MetricsGrid.jsx  RevenueChart.jsx  UserGrowthChart.jsx
frontend/src/hooks/: useAuth.js  useAuth.jsx
frontend/src/pages/: AccountSwitchGuide.jsx  BotSelectionPage.jsx  DashboardPage.jsx  LoginPage.jsx
frontend/src/utils/: api.js  errorHandler.js
