[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.2",
    "python-multipart>=0.0.20",
    "supabase>=2.22.0",
    "uvicorn[standard]>=0.37.0",
]
